[B][COLOR=FFFF8C00]BUILD 13.7.0 - RELEASE DATE 12/15/2023[/COLOR][/B]
New:  Support for retrogames controller features
New:  Movie versions

[B][COLOR=FFFF8C00]BUILD 12.7.0 - [/COLOR][/B]
Fix:  Replace posx with left / posy with top
Note:  Basis for Aeon MQ5 OmegaMod

[B][COLOR=FFFF8C00]BUILD 12.5.0 - RELEASE DATE 02/28/2023[/COLOR][/B]
New:  Implement new Nexus screen calibration controls including "reset"
New:  Implement Nexus display after seek as a variable skin setting of 0 to 5 secs
Improved:  Use "AddonIsEnabled" so that installed but disabled addons are not treated as available
Improved:  Skin windows for extendedinfo script improved for script.extendedinfo ver 6.0.5
Improved:  The custom MPAA certification window (reach from video info dialog) includes "date added"

[B][COLOR=FFFF8C00]BUILD 12.4.0 - RELEASE DATE 11/14/2022[/COLOR][/B]
Improved:  Library Editor can be launched for sets and MVs
Improved:  New Nexus timer for displaying SeekBar
New:  Add new Nexus Favourites Browser Window as a media window

[B][COLOR=FFFF8C00]BUILD 12.3.0 - RELEASE DATE 05/23/2022[/COLOR][/B]
New:  Show hdr flags
New:  Add new video aspect ratio flags (Nexus feature)
New:  Add button to show/hide password entry in virtual keyboard (Nexus feature)
New:  Use min:sec for music video runtime display
New:  on video info dialog, click button on MPAA rating tag for more info
New:  Widgets on home page for addons (programs menu)
Fix:  Default home menu weather settings submenu had obsolete window
Improved:  Extendedinfo script dialog windows
Improved:  Use colorpicker button to set video case colors

[B][COLOR=FFFF8C00]BUILD 12.2.0 - RELEASE DATE 12/31/2021[/COLOR][/B]
New:  Add new colorbutton and use in subtitle settings (Nexus feature)
Improved:  ROM Collection Browser and LRC lyrics addons now are optional
Improved:  All 11.2.0 fixes incorporated

[B][COLOR=FFFF8C00]BUILD 11.2.0 - RELEASE DATE 12/31/2021[/COLOR][/B]